# pdj

./: .env.copy  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.local.yml  docker-compose.nginx-no-ssl.yml  docker-compose.yml  pyproject.toml
app/accounts/: admin.py  initializers.py  models.py
app/accounts/migrations/: 0001_initial.py  0002_client_client_id_client_client_secret_delete_token.py  0002_remove_client_cancel_url_remove_client_return_url_and_more.py  0002_remove_client_home_url_remove_client_image_url_and_more.py  0002_ssoidentity_delete_useridentity.py  0002_user_is_mailing_subscribed.py
app/api/: __init__.py  base.py
app/api/authenticators/: __init__.py  client.py  fief.py  session.py
app/api/mailing/: api.py  schemas.py
app/api/plans/: api.py  schemas.py
app/api/subscriptions/: api.py  schemas.py
app/api/users/: api.py  schemas.py
app/api/webhooks/: api.py  exceptions.py  schemas.py
app/core/: admin.py  celery.py  middleware.py  models.py  settings.py  urls.py  utils.py
app/core/api/: __init__.py  _base.py  routes.py  schemas.py  urls.py
app/core/jinja2/: __init__.py  filters.py
app/customizations/: admin.py  apps.py  context.py  initializers.py  models.py  tasks.py
app/payment/: admin.py  apps.py  models.py
app/payment_service/: asgi.py  settings.py  urls.py  wsgi.py
app/payments/: admin.py  api.py  apps.py  exceptions.py  filters.py  initializers.py  models.py  schemas.py  serializers.py  signals.py  tasks.py
app/provider/: admin.py  models.py
docs/: env.md  faq.md  production.md
(+56 files in other folders)
